--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -14,6 +14,9 @@
       var(--bg);
     color: var(--text);
   }
+  .contact {
+    padding-top: calc(var(--nav-h, 72px) + 25px); /* clear the fixed navbar */
+  }
   
   .contact__wrap {
     display: grid;
